<resources>
    <string name="app_name">iDART Mobile</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_username">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="logImage">Log Image</string>
    <string name="logIDart">Log iDart Image</string>
    <string name="nome_farmacia">Farmácia Indico</string>
    <string name="endereco_farmacia">Av.Mateus Munguambe</string>
    <string name="contacto_farmacia">Telefone: 82665382</string>
    <string name="gestao_patient">Gestão de Pacientes</string>
    <string name="gestao_stock">Gestão de Stock</string>
    <string name="content_description_logo">Logo idart</string>
    <string name="logo_farmacia">logo farmacia</string>
    <string name="search_patient">NID/Nome  do Paciente</string>
    <string name="input_search_patient">pesquisar</string>
    <string name="stock_entrance_fragment">Lista de Entrada de Stock</string>
    <string name="stock_inventory_fragment">Inventário Inactivo por enquanto.</string>
    <string name="general_info">Visão Geral</string>
    <string name="episode">Episódio</string>
    <string name="dispense">Dispensa</string>
    <string name="prescription">Prescrição</string>
    <string name="alert_ok">OK</string>
    <string name="name">Nome: </string>
    <string name="nid">NID: </string>
    <string name="last_name">Apelido: </string>
    <string name="button_ok">OK</string>
    <string name="unidade_sanit_ria">Unidade Sanitária: </string>
    <string name="genero">Gênero:</string>
    <string name="idade">Idade:</string>
    <string name="telefone">Telefone:</string>
    <string name="data_levantamento">Data Levantamento</string>
    <string name="data_ult_levantamento">Data Ultimo Levantamento</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="visualizar_detalhes">Visualizar Detalhes</string>
    <string name="data_episodio">Data Episódio:</string>
    <string name="data_de_referencia">Data de Referência:</string>
    <string name="data_prox_levantamento">Data do Prox. Levan</string>
    <string name="notas">Notas:</string>
    <string name="data">data</string>
    <string name="regime_terapeutico">Regime Terapêutico</string>
    <string name="linha">Linha Terapêutica</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="contacto_pessoais">Contacto</string>
    <string name="other_details_person">Outros</string>
    <string name="phone_person">Telefone:</string>
    <string name="adress_person">Endereço:</string>
    <string name="date_tarv">Data Inicio TARV:</string>
    <string name="farmacia">Farmácia</string>
    <string name="reason_to_stop">reasontostop</string>
    <string name="stock_entrance">Entrada de Stock</string>
    <string name="stock_inventory">Inventário</string>
    <string name="data_da_visita">Data da visita</string>
    <string name="adicionar_episodio">Adicionar/Editar Episodio</string>
    <string name="motivo_de_inicio">Motivo de Inicio</string>
    <string name="motivo_de_fim">Motivo de Fim</string>
    <string name="remove">Remover</string>
    <string name="cancel">Cancelar</string>
    <string name="list_item_delete_msg">Confirma remover o item?</string>
    <string name="dt_proximo_levantamento">Próx. levantamento:</string>
    <string name="drug_data_duplication_msg">Não pode adicionar o mesmo medicamento duas vezes.</string>
    <string name="stock_menor">A quantidade a dispensar é maior que o stock do medicamento.</string>
    <string name="label_entrada_stock">Entrada de Stock - Dados Iniciais</string>
    <string name="label_numero_guia">Número da Guia *</string>
    <string name="label_data_entrada">Data da Entrada *</string>
    <string name="label_entrada_stock_medicamentos">Entrada de Stock - Medicamentos</string>
    <string name="label_medicamentos">Medicamentos *</string>
    <string name="label_numero_lote">Número do Lote *</string>
    <string name="label_data_validade">Data de Validade *</string>
    <string name="label_quantidade_recebida">Quantidade Recebida *</string>
    <string name="label_preco">Preço *</string>
    <string name="error_loading_form_data">\"Ocorreu um erro ao carregar os dados iniciais do formulário. \"</string>
    <string name="save_error_msg">\"Ocorreu um erro ao gravar a prescrição. \"</string>
    <string name="find_stock_list_error">\" Ocorreru um erro na busca da lista de stocks do medicamento. \"</string>
    <string name="record_saved">Registo gravado com sucesso.</string>
    <string name="label_lista_medicamentos">Lista de Medicamentos *</string>
    <string name="drug_data_empty_filds">Todos os campos do formulário são obrigatórios.</string>
    <string name="drug_validate_date">A data de validade deve ser no minimo de dois meses (60 dias).</string>
    <string name="drug_entrada_date">A Data de Entrada não pode ser futura.</string>
    <string name="record_sucessfuly_removed">Registo removido com sucesso</string>
    <string name="would_like_to_dispense">A Prescrição foi gravada com sucesso. Pretende dispensar a mesma?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="prescription_cant_be_removed_msg">Esta Prescrição não pode ser removida, pois já esta sincronizada com o IDART central.</string>
    <string name="no_patient_or_prescription">Não foi seleccionado um paciente ou prescrição.</string>
    <string name="error_on_loading_data">Ocorreu um erro ao carregar os dados da base de dados </string>
    <string name="see_olny_regimen_grugs">Visualizar apenas medicamentos do regime terapêutico?</string>
    <string name="drugs">Medicamentos *</string>
    <string name="adicionar_prescri_o_dados_iniciais">Adicionar Prescrição - Dados Iniciais</string>
    <string name="prescription_date">Data da Prescrição:</string>
    <string name="duration">Duração</string>
    <string name="therapeutic_regimen">Regime Terapêutico</string>
    <string name="therapeutic_line">Linha Terapêutica</string>
    <string name="dispense_type">Tipo de Dispensa: </string>
    <string name="adicionar_prescri_o_medicamentos">Adicionar Prescrição - Medicamentos</string>
    <string name="drug_list">Lista de Medicamentos *</string>
    <string name="adicionar_prescri_o_prescri_o_especial">Adicionar Prescrição - Prescrição Especial</string>
    <string name="prescri_o_especial_info">Prescrição Especial</string>
    <string name="prescri_o_especial">Prescrição Especial?</string>
    <string name="motivo">Motivo *</string>
    <string name="prescription_got_dispenses_msg">Esta prescrição já tem levantamentos registados, não pode ser removida.</string>
    <string name="no_search_results">Não foram encontrados resultados para a sua pesquisa.</string>
    <string name="nid_or_name_is_mandatory">Deve informar o nome ou nid para pesquisar.</string>
    <string name="cant_edit_prescription_msg">Não pode efectuar alterações sobre esta prescrição pois a mesma ja possui levantamentos registados.</string>
    <string name="cant_edit_synced_prescription">Não pode efectuar alterações sobre esta prescrição pois a mesma ja foi sincronizada com o iDART central.</string>
    <string name="save_error_msg_episode">\"Ocorreu um erro ao gravar o Episodio. \"</string>
    <string name="loading">\" Por favor, aguarde …\"</string>
    <string name="authenticate">Autenticando …</string>
    <string name="prescription_date_mandatory">A data da prescrição é obrigatória</string>
    <string name="prescription_date_not_correct">A data da prescrição não pode ser maior que a data corrente.</string>
    <string name="prescription_durationmandatory">A duração da prescrição deve ser indicada.</string>
    <string name="prescription_dispense_type_mandatory">O campo tipo de dispensa é obrigatório.</string>
    <string name="regimen_mandatory">O campo tipo de regime terapeutico é obrigatório.</string>
    <string name="prescription_line_mandatory">O campo tipo de linha terapeutica é obrigatório.</string>
    <string name="prescription_drugs_mandatory">Por favor indique os medicamentos para esta prescrição</string>
    <string name="prescription_urgent_notes_mandatory">Indicou que a prescrição é especial, por favor indique o motivo.</string>
    <string name="error_loading_patient_data">Ocorreu um erro ao carregar os dados do paciente.</string>
    <string name="no_episode_found">Não foi encontrado nenhum episódio do paciente seleccionado</string>
    <string name="new_prescription_creation">A ultima prescrição ainda não teve todos os levantamentos efectuados, confirma anular a mesma e criar nova?</string>
    <string name="cant_edit_synced_dispense">Não pode efectuar alterações sobre esta dispensa pois a mesma já foi sincronizada com o iDART central.</string>
    <string name="dispense_cant_be_removed_msg">Esta Dispensa não pode ser removida, pois já foi sincronizada com o IDART central.</string>
    <string name="error_removing_record">Ocorreu um erro ao remover o registo.</string>
    <string name="error_msg_server_offline">Servidor offline, não será possível realizar sincronizações, por favor tente mais tarde.</string>
    <string name="error_msg_server_offline_records_wont_be_sync">Servidor offline, não será possível realizar sincronizações dos registos criados.</string>
    <string name="confirm_prescription_save">Confirma gravar esta prescrição na base de dados?</string>
    <string name="time_out_msg">Time out - Não foi possivel terminar a configuração inicial da aplicação.</string>
    <string name="cant_edit_patient_data">Não pode efectuar alterações sobre registos deste paciente, pois possui registado um episódio de fecho.</string>
    <string name="quantity_cannot_be_zero">A quantidade não pode ser igual a zero.</string>
    <string name="must_select_at_least_one_drug">Deve Selecionar um Medicamento para dar entrada.</string>
    <string name="stock_saved_sucessfully">Stock salvo com sucesso</string>
    <string name="guide_number_already_exists">O número da guia já existe no sistema</string>
    <string name="stock_edited_sucessfully">Stock editado com sucesso</string>
    <string name="stock_cannot_be_edited_already_used">O Stock não pode ser actualizado, uma vez que já foi utilizado para dispensar medicamentos</string>
    <string name="stock_cannot_be_edited_already_synchronized">O Stock não pode ser actualizado, uma vez que já foi sicronizado com a central</string>
    <string name="stock_cannot_be_removed_already_used">O Stock não pode ser removido, uma vez que já foi utilizado para dispensar medicamentos</string>
    <string name="stock_cannot_be_removed_already_synchronized">O Stock não pode ser removido, uma vez que já foi sicronizado com a central</string>
    <string name="episode_cannot_be_edited_already_synchronized">O Episódio não pode ser editado uma vez que já foi sicronizado com a central</string>
    <string name="episode_cannot_be_removed_already_synchronized">O Episódio não pode ser removido uma vez que já foi sicronizado com a central</string>
    <string name="episode_created_sucessfuly">Episódio Criado Com Sucesso</string>
    <string name="codigo">FNM</string>
    <string name="descricao">Descrição</string>
    <string name="lote">Lote</string>
    <string name="quantidade">Quantidade</string>
    <string name="dta_levantamento">Data Levan</string>
</resources>