<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable name="listble" type="mz.org.fgh.idartlite.common.Listble" />

        <variable name="viewListEditButton" type="boolean" />
        <variable name="viewListRemoveButton" type="boolean" />

        <import type="mz.org.fgh.idartlite.util.Utilities"/>
        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/list_icon"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/codigo" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.030"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.6"
                android:text="@string/descricao" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.030"
                android:background="@color/white"
                android:visibility="@{Utilities.stringHasValue(listble.lote) ? View.VISIBLE : View.GONE}" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/lote"
                android:visibility="@{Utilities.stringHasValue(listble.lote) ? View.VISIBLE : View.GONE}" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.030"
                android:background="@color/white"
                android:visibility="@{listble.quantity > 0 ? View.VISIBLE : View.GONE}" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantidade"
                android:visibility="@{listble.quantity > 0 ? View.VISIBLE : View.GONE}" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.030"
                android:background="@color/white"
                android:visibility="@{!viewListEditButton ? View.GONE : View.VISIBLE}" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/editar"
                android:visibility="@{!viewListEditButton ? View.GONE : View.VISIBLE}" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.030"
                android:background="@color/white"
                android:visibility="@{ !viewListRemoveButton ? View.GONE : View.VISIBLE}" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/remover"
                android:visibility="@{!viewListRemoveButton ? View.GONE : View.VISIBLE}" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
