<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable name="viewListEditButton" type="boolean" />
        <variable name="viewListRemoveButton" type="boolean" />

        <import type="mz.org.fgh.idartlite.util.Utilities"/>
        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_light_back"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:text="@string/dta_levantamento"
                    style="@style/listble_header" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.030"
                    android:background="@color/separator" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    style="@style/listble_header"
                    android:text="@string/data_prox_levantamento" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.030"
                    android:background="@color/separator" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    style="@style/listble_header"
                    android:text="@string/regime_terapeutico"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.030"
                    android:background="@color/separator" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    style="@style/listble_header"
                    android:text="@string/dispense_type" />




            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@color/colorPrimaryDark"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
