<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="episode"
            type="mz.org.fgh.idartlite.model.Episode" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                bind:srcCompat="@drawable/ic_prescription"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Inicio"
                    android:textSize="@dimen/dimen_18dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/prescriptionId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Paciente Referido da US"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:textSize="@dimen/dimen_18dp"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:paddingLeft="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="4.8">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_episodio"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_de_referencia"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_prox_levantamento"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notas"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dimen_10dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/dataEpisodio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{episode.getStringEpisodeDate}"/>
                    <TextView
                        android:id="@+id/dataReferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{episode.getStringEpisodeDate}"/>
                    <TextView
                        android:id="@+id/dataProxLevantamento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{episode.getStringEpisodeDate}"/>
                    <TextView
                        android:id="@+id/notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{episode.notes}"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="@dimen/dimen_10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dimen_22dp"
                        bind:srcCompat="@drawable/ic_baseline_autorenew_24"/>
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</layout>